--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,23 @@ ACCESS_TOKEN_EXPIRE_MINUTES=15
 USE_COOKIES=true
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_PUBLIC_KEY=your_stripe_public_key
+STRIPE_WEBHOOK_SECRET=whsec_your_secret
+STRIPE_PRICE_FREE=price_free
+STRIPE_PRICE_PRO=price_pro
+STRIPE_PRICE_BUSINESS=price_business
+
+FREE_REVIEWS_FETCHED_LIMIT=100
+FREE_AI_SUGGESTIONS_LIMIT=100
+FREE_AUTO_REPLIES_LIMIT=100
+FREE_CONNECTED_LOCATIONS_LIMIT=1
+
+PRO_REVIEWS_FETCHED_LIMIT=1000
+PRO_AI_SUGGESTIONS_LIMIT=1000
+PRO_AUTO_REPLIES_LIMIT=1000
+PRO_CONNECTED_LOCATIONS_LIMIT=10
+
+BUSINESS_REVIEWS_FETCHED_LIMIT=10000
+BUSINESS_AI_SUGGESTIONS_LIMIT=10000
+BUSINESS_AUTO_REPLIES_LIMIT=10000
+BUSINESS_CONNECTED_LOCATIONS_LIMIT=100
 OPENAI_API_KEY=your_openai_api_key
