--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "uvicorn",
     "SQLAlchemy>=2.0",
     "alembic",
-    "psycopg[binary]",
+    "psycopg2-binary>=2.9",
     "pydantic>=2.0",
     "pydantic-settings",
     "redis",
